--- a/pom.xml
+++ b/pom.xml
@@ -54,8 +54,10 @@
         <maven.resources.plugin.version>3.3.1</maven.resources.plugin.version>
         <maven.source.plugin.version>3.3.1</maven.source.plugin.version>
         <maven.javadoc.plugin.version>3.11.1</maven.javadoc.plugin.version>
+        <maven.deploy.plugin.version>3.1.2</maven.deploy.plugin.version>
         <junit.jupiter.version>6.0.0</junit.jupiter.version>
         <maven.surefire.plugin.version>3.5.2</maven.surefire.plugin.version>
+        <central.publishing.plugin.version>0.6.0</central.publishing.plugin.version>
     </properties>
 
     <dependencyManagement>
@@ -179,6 +181,24 @@
     </build>
 
     <profiles>
+        <profile>
+            <id>central</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.sonatype.central</groupId>
+                        <artifactId>central-publishing-maven-plugin</artifactId>
+                        <version>${central.publishing.plugin.version}</version>
+                        <extensions>true</extensions>
+                        <configuration>
+                            <publishingServerId>central</publishingServerId>
+                            <tokenAuth>true</tokenAuth>
+                            <autoPublish>true</autoPublish>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
         <profile>
             <id>release</id>
             <build>
