--- a/arbercharts-starter/pom.xml
+++ b/arbercharts-starter/pom.xml
@@ -7,11 +7,10 @@
     <parent>
         <groupId>com.arbergashi</groupId>
         <artifactId>arber-charts-parent</artifactId>
-        <version>1.3.0</version>
+        <version>1.7.0-LTS</version>
     </parent>
 
     <artifactId>arbercharts-starter</artifactId>
-    <version>1.3.0</version>
     <packaging>jar</packaging>
     <name>ArberCharts Starter Bundle</name>
 
@@ -19,12 +18,41 @@
         <dependency>
             <groupId>com.arbergashi</groupId>
             <artifactId>arbercharts-core</artifactId>
-            <version>1.3.0</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.arbergashi</groupId>
-            <artifactId>arbercharts-ext-properties</artifactId>
-            <version>1.3.0</version>
+            <artifactId>arbercharts-swing-bridge</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.arbergashi</groupId>
+            <artifactId>arbercharts-server-bridge</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.6.0</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <createDependencyReducedPom>false</createDependencyReducedPom>
+                            <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+                            </transformers>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
