--- a/pom.xml
+++ b/pom.xml
@@ -71,8 +71,11 @@
         <flatlaf.version>3.7</flatlaf.version>
         <!-- TODO: Evaluate FlatLaf 4.x once stable for this codebase -->
         <spring.boot.version>4.0.2</spring.boot.version>
-        <maven.compiler.plugin.version>3.13.0</maven.compiler.plugin.version>
-        <maven.jar.plugin.version>3.4.2</maven.jar.plugin.version>
+	        <maven.compiler.plugin.version>3.13.0</maven.compiler.plugin.version>
+            <maven.clean.plugin.version>3.4.0</maven.clean.plugin.version>
+            <maven.install.plugin.version>3.1.3</maven.install.plugin.version>
+            <maven.site.plugin.version>3.12.1</maven.site.plugin.version>
+	        <maven.jar.plugin.version>3.4.2</maven.jar.plugin.version>
 	        <maven.resources.plugin.version>3.3.1</maven.resources.plugin.version>
 	        <maven.source.plugin.version>3.3.1</maven.source.plugin.version>
 	        <maven.javadoc.plugin.version>3.11.1</maven.javadoc.plugin.version>
@@ -173,6 +176,30 @@
                             </manifestEntries>
                         </archive>
                     </configuration>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-clean-plugin</artifactId>
+                    <version>${maven.clean.plugin.version}</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-install-plugin</artifactId>
+                    <version>${maven.install.plugin.version}</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-site-plugin</artifactId>
+                    <version>${maven.site.plugin.version}</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-deploy-plugin</artifactId>
+                    <version>${maven.deploy.plugin.version}</version>
                 </plugin>
 
                 <plugin>
@@ -317,6 +344,9 @@
                                             <version>[25,)</version>
                                         </requireJavaVersion>
                                         <banDuplicatePomDependencyVersions/>
+                                        <dependencyConvergence/>
+                                        <requireUpperBoundDeps/>
+                                        <requirePluginVersions/>
                                     </rules>
                                 </configuration>
                             </execution>
