--- a/arbercharts-server-bridge/pom.xml
+++ b/arbercharts-server-bridge/pom.xml
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-core</artifactId>
-            <version>1.14.4</version>
+            <version>${micrometer.version}</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
