--- a/arbercharts-spring-boot-starter/pom.xml
+++ b/arbercharts-spring-boot-starter/pom.xml
@@ -38,7 +38,7 @@
         <dependency>
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-core</artifactId>
-            <version>1.14.4</version>
+            <version>${micrometer.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
