--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,8 @@
 	        <junit.jupiter.version>5.11.2</junit.jupiter.version>
 	        <maven.surefire.plugin.version>3.5.2</maven.surefire.plugin.version>
             <maven.checkstyle.plugin.version>3.5.0</maven.checkstyle.plugin.version>
+            <micrometer.version>1.16.2</micrometer.version>
+            <slf4j.version>2.0.17</slf4j.version>
 	    </properties>
 
     <dependencyManagement>
@@ -108,6 +110,27 @@
                 <artifactId>junit-jupiter</artifactId>
                 <version>${junit.jupiter.version}</version>
                 <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>io.micrometer</groupId>
+                <artifactId>micrometer-core</artifactId>
+                <version>${micrometer.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.micrometer</groupId>
+                <artifactId>micrometer-commons</artifactId>
+                <version>${micrometer.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.micrometer</groupId>
+                <artifactId>micrometer-observation</artifactId>
+                <version>${micrometer.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4j.version}</version>
             </dependency>
 
             <dependency>
