Simplify demo content and align dark palette with VS Code Modern Dark

--- a/arbercharts-demo/src/main/resources/themes/FlatDarkLaf.properties
+++ b/arbercharts-demo/src/main/resources/themes/FlatDarkLaf.properties
@@ -1,28 +1,28 @@
 # =============================================================================
-# ArberCharts Demo - FlatLaf Dark Theme (2026 Edition)
-# Inspired by: IntelliJ IDEA 2026 Dark, VSCode Dark Modern, GitHub Dark
+# ArberCharts Demo - FlatLaf Dark Theme (VS Code Modern Dark Aligned)
+# Inspired by: VS Code Modern Dark
 # =============================================================================
 
 # -----------------------------------------------------------------------------
 # Core Colors
 # -----------------------------------------------------------------------------
-@background = #1E1E1E
+@background = #1F1F1F
 @foreground = #CCCCCC
-@accentColor = #4D9FE0
-@selectionBackground = #264F78
+@accentColor = #4DA3FF
+@selectionBackground = #2A2D2E
 @selectionForeground = #FFFFFF
-@disabledForeground = #6B6B6B
-@borderColor = #3C3C3C
+@disabledForeground = #7D8590
+@borderColor = #2F3336
 
 # -----------------------------------------------------------------------------
 # Window & Title
 # -----------------------------------------------------------------------------
-TitlePane.background = #1E1E1E
+TitlePane.background = #181818
 TitlePane.foreground = #CCCCCC
-TitlePane.inactiveBackground = #1E1E1E
-TitlePane.inactiveForeground = #808080
-TitlePane.buttonHoverBackground = #3C3C3C
-TitlePane.buttonPressedBackground = #505050
+TitlePane.inactiveBackground = #181818
+TitlePane.inactiveForeground = #8B949E
+TitlePane.buttonHoverBackground = #2A2D2E
+TitlePane.buttonPressedBackground = #33383B
 
 # -----------------------------------------------------------------------------
 # Panel & Containers
@@ -33,49 +33,49 @@ Panel.foreground = @foreground
 # -----------------------------------------------------------------------------
 # Tree (Sidebar Navigation)
 # -----------------------------------------------------------------------------
-Tree.background = #252526
+Tree.background = #181818
 Tree.foreground = @foreground
 Tree.selectionBackground = @selectionBackground
 Tree.selectionForeground = @selectionForeground
-Tree.selectionInactiveBackground = #37373D
+Tree.selectionInactiveBackground = #232628
 Tree.rowHeight = 26
 
 # -----------------------------------------------------------------------------
 # Text Components
 # -----------------------------------------------------------------------------
-TextComponent.background = #2D2D2D
+TextComponent.background = #252526
 TextComponent.foreground = @foreground
 TextComponent.selectionBackground = @selectionBackground
 TextComponent.selectionForeground = @selectionForeground
 TextComponent.arc = 6
 
-TextField.background = #2D2D2D
+TextField.background = #252526
 TextField.foreground = @foreground
-TextField.placeholderForeground = #6B6B6B
-TextField.borderColor = #3C3C3C
+TextField.placeholderForeground = #7D8590
+TextField.borderColor = #3A3F44
 
 # -----------------------------------------------------------------------------
 # Buttons
 # -----------------------------------------------------------------------------
-Button.background = #3C3C3C
+Button.background = #2A2D2E
 Button.foreground = @foreground
-Button.hoverBackground = #454545
-Button.pressedBackground = #505050
-Button.disabledBackground = #2D2D2D
+Button.hoverBackground = #33383B
+Button.pressedBackground = #3A3F44
+Button.disabledBackground = #252526
 Button.disabledText = @disabledForeground
-Button.borderColor = #4F4F4F
+Button.borderColor = #3A3F44
 Button.arc = 6
 
-Button.default.background = #0E639C
+Button.default.background = #0078D4
 Button.default.foreground = #FFFFFF
-Button.default.hoverBackground = #1177BB
+Button.default.hoverBackground = #1193F5
 
 # -----------------------------------------------------------------------------
 # ComboBox
 # -----------------------------------------------------------------------------
-ComboBox.background = #2D2D2D
+ComboBox.background = #252526
 ComboBox.foreground = @foreground
-ComboBox.buttonBackground = #3C3C3C
+ComboBox.buttonBackground = #2A2D2E
 ComboBox.buttonArrowColor = #CCCCCC
 ComboBox.selectionBackground = @selectionBackground
 ComboBox.arc = 6
@@ -83,23 +83,23 @@ ComboBox.arc = 6
 # -----------------------------------------------------------------------------
 # Menu
 # -----------------------------------------------------------------------------
-MenuBar.background = #1E1E1E
+MenuBar.background = #181818
 MenuBar.foreground = @foreground
-MenuBar.hoverBackground = #2D2D30
+MenuBar.hoverBackground = #232628
 
-Menu.background = #252526
+Menu.background = #1F1F1F
 Menu.foreground = @foreground
 Menu.selectionBackground = @selectionBackground
 Menu.selectionForeground = @selectionForeground
 
-MenuItem.background = #252526
+MenuItem.background = #1F1F1F
 MenuItem.foreground = @foreground
 MenuItem.selectionBackground = @selectionBackground
 MenuItem.selectionForeground = @selectionForeground
-MenuItem.acceleratorForeground = #808080
+MenuItem.acceleratorForeground = #8B949E
 
-PopupMenu.background = #252526
-PopupMenu.borderColor = #454545
+PopupMenu.background = #1F1F1F
+PopupMenu.borderColor = #33383B
 
 # -----------------------------------------------------------------------------
 # Table
@@ -108,24 +108,24 @@ Table.background = @background
 Table.foreground = @foreground
 Table.selectionBackground = @selectionBackground
 Table.selectionForeground = @selectionForeground
-Table.gridColor = #2D2D2D
+Table.gridColor = #2A2D2E
 
-TableHeader.background = #252526
+TableHeader.background = #1F1F1F
 TableHeader.foreground = @foreground
-TableHeader.separatorColor = #3C3C3C
+TableHeader.separatorColor = #33383B
 
 # -----------------------------------------------------------------------------
 # ToolTip
 # -----------------------------------------------------------------------------
-ToolTip.background = #252526
+ToolTip.background = #1F1F1F
 ToolTip.foreground = @foreground
-ToolTip.borderColor = #454545
+ToolTip.borderColor = #33383B
 
 # -----------------------------------------------------------------------------
 # TabbedPane
 # -----------------------------------------------------------------------------
-TabbedPane.background = #252526
-TabbedPane.foreground = #808080
+TabbedPane.background = #1F1F1F
+TabbedPane.foreground = #8B949E
 TabbedPane.selectedBackground = @background
 TabbedPane.selectedForeground = @foreground
 TabbedPane.underlineColor = @accentColor
@@ -137,10 +137,10 @@ TabbedPane.tabHeight = 32
 # -----------------------------------------------------------------------------
 ScrollBar.width = 10
 ScrollBar.thumbArc = 8
-ScrollBar.thumb = #4A4A4A
-ScrollBar.thumbHover = #5A5A5A
-ScrollBar.thumbPressed = #6A6A6A
-ScrollBar.track = #1E1E1E
+ScrollBar.thumb = #3A3F44
+ScrollBar.thumbHover = #4A5056
+ScrollBar.thumbPressed = #5A6169
+ScrollBar.track = #1F1F1F
 ScrollBar.showButtons = false
 
 # -----------------------------------------------------------------------------
@@ -149,19 +149,19 @@ ScrollBar.showButtons = false
 SplitPane.dividerSize = 1
 SplitPane.background = @background
 SplitPaneDivider.style = plain
-SplitPaneDivider.gripColor = #3C3C3C
+SplitPaneDivider.gripColor = #2F3336
 SplitPaneDivider.gripDotCount = 0
 SplitPaneDivider.draggingColor = @accentColor
 
 # -----------------------------------------------------------------------------
 # Separator
 # -----------------------------------------------------------------------------
-Separator.foreground = #3C3C3C
+Separator.foreground = #2F3336
 
 # -----------------------------------------------------------------------------
 # ProgressBar
 # -----------------------------------------------------------------------------
-ProgressBar.background = #3C3C3C
+ProgressBar.background = #2A2D2E
 ProgressBar.foreground = @accentColor
 ProgressBar.arc = 8
 
@@ -185,5 +185,4 @@ List.selectionInactiveBackground = #37373D
 # -----------------------------------------------------------------------------
 # Link
 # -----------------------------------------------------------------------------
-Component.linkColor = #4D9FE0
-
+Component.linkColor = #4DA3FF
