Finalize VS Code modern dark theme from resources only

--- a/arbercharts-demo/src/main/resources/themes/FlatDarkLaf.properties
+++ b/arbercharts-demo/src/main/resources/themes/FlatDarkLaf.properties
@@ -9,10 +9,10 @@
 @background = #1F1F1F
 @foreground = #CCCCCC
 @accentColor = #4DA3FF
-@selectionBackground = #2A2D2E
+@selectionBackground = #264F78
 @selectionForeground = #FFFFFF
 @disabledForeground = #7D8590
-@borderColor = #2F3336
+@borderColor = #2B2B2B
 
 # -----------------------------------------------------------------------------
 # Window & Title
@@ -21,8 +21,8 @@ TitlePane.background = #181818
 TitlePane.foreground = #CCCCCC
 TitlePane.inactiveBackground = #181818
 TitlePane.inactiveForeground = #8B949E
-TitlePane.buttonHoverBackground = #2A2D2E
-TitlePane.buttonPressedBackground = #33383B
+TitlePane.buttonHoverBackground = #2A2A2A
+TitlePane.buttonPressedBackground = #353535
 
 # -----------------------------------------------------------------------------
 # Panel & Containers
@@ -43,39 +43,39 @@ Tree.rowHeight = 26
 # -----------------------------------------------------------------------------
 # Text Components
 # -----------------------------------------------------------------------------
-TextComponent.background = #252526
+TextComponent.background = #2A2A2A
 TextComponent.foreground = @foreground
 TextComponent.selectionBackground = @selectionBackground
 TextComponent.selectionForeground = @selectionForeground
 TextComponent.arc = 6
 
-TextField.background = #252526
+TextField.background = #2A2A2A
 TextField.foreground = @foreground
 TextField.placeholderForeground = #7D8590
-TextField.borderColor = #3A3F44
+TextField.borderColor = #3C3C3C
 
 # -----------------------------------------------------------------------------
 # Buttons
 # -----------------------------------------------------------------------------
-Button.background = #2A2D2E
+Button.background = #2D2D2D
 Button.foreground = @foreground
-Button.hoverBackground = #33383B
-Button.pressedBackground = #3A3F44
-Button.disabledBackground = #252526
+Button.hoverBackground = #373737
+Button.pressedBackground = #3F3F3F
+Button.disabledBackground = #262626
 Button.disabledText = @disabledForeground
-Button.borderColor = #3A3F44
+Button.borderColor = #3C3C3C
 Button.arc = 6
 
-Button.default.background = #0078D4
+Button.default.background = #0E639C
 Button.default.foreground = #FFFFFF
-Button.default.hoverBackground = #1193F5
+Button.default.hoverBackground = #1177BB
 
 # -----------------------------------------------------------------------------
 # ComboBox
 # -----------------------------------------------------------------------------
-ComboBox.background = #252526
+ComboBox.background = #2A2A2A
 ComboBox.foreground = @foreground
-ComboBox.buttonBackground = #2A2D2E
+ComboBox.buttonBackground = #303030
 ComboBox.buttonArrowColor = #CCCCCC
 ComboBox.selectionBackground = @selectionBackground
 ComboBox.arc = 6
@@ -85,21 +85,21 @@ ComboBox.arc = 6
 # -----------------------------------------------------------------------------
 MenuBar.background = #181818
 MenuBar.foreground = @foreground
-MenuBar.hoverBackground = #232628
+MenuBar.hoverBackground = #2A2A2A
 
-Menu.background = #1F1F1F
+Menu.background = #252526
 Menu.foreground = @foreground
 Menu.selectionBackground = @selectionBackground
 Menu.selectionForeground = @selectionForeground
 
-MenuItem.background = #1F1F1F
+MenuItem.background = #252526
 MenuItem.foreground = @foreground
 MenuItem.selectionBackground = @selectionBackground
 MenuItem.selectionForeground = @selectionForeground
 MenuItem.acceleratorForeground = #8B949E
 
-PopupMenu.background = #1F1F1F
-PopupMenu.borderColor = #33383B
+PopupMenu.background = #252526
+PopupMenu.borderColor = #454545
 
 # -----------------------------------------------------------------------------
 # Table
@@ -108,23 +108,23 @@ Table.background = @background
 Table.foreground = @foreground
 Table.selectionBackground = @selectionBackground
 Table.selectionForeground = @selectionForeground
-Table.gridColor = #2A2D2E
+Table.gridColor = #2D2D2D
 
-TableHeader.background = #1F1F1F
+TableHeader.background = #252526
 TableHeader.foreground = @foreground
-TableHeader.separatorColor = #33383B
+TableHeader.separatorColor = #3C3C3C
 
 # -----------------------------------------------------------------------------
 # ToolTip
 # -----------------------------------------------------------------------------
-ToolTip.background = #1F1F1F
+ToolTip.background = #252526
 ToolTip.foreground = @foreground
-ToolTip.borderColor = #33383B
+ToolTip.borderColor = #454545
 
 # -----------------------------------------------------------------------------
 # TabbedPane
 # -----------------------------------------------------------------------------
-TabbedPane.background = #1F1F1F
+TabbedPane.background = #252526
 TabbedPane.foreground = #8B949E
 TabbedPane.selectedBackground = @background
 TabbedPane.selectedForeground = @foreground
@@ -137,10 +137,10 @@ TabbedPane.tabHeight = 32
 # -----------------------------------------------------------------------------
 ScrollBar.width = 10
 ScrollBar.thumbArc = 8
-ScrollBar.thumb = #3A3F44
-ScrollBar.thumbHover = #4A5056
-ScrollBar.thumbPressed = #5A6169
-ScrollBar.track = #1F1F1F
+ScrollBar.thumb = #4A4A4A
+ScrollBar.thumbHover = #5A5A5A
+ScrollBar.thumbPressed = #6A6A6A
+ScrollBar.track = #1E1E1E
 ScrollBar.showButtons = false
 
 # -----------------------------------------------------------------------------
@@ -149,19 +149,19 @@ ScrollBar.showButtons = false
 SplitPane.dividerSize = 1
 SplitPane.background = @background
 SplitPaneDivider.style = plain
-SplitPaneDivider.gripColor = #2F3336
+SplitPaneDivider.gripColor = #3C3C3C
 SplitPaneDivider.gripDotCount = 0
 SplitPaneDivider.draggingColor = @accentColor
 
 # -----------------------------------------------------------------------------
 # Separator
 # -----------------------------------------------------------------------------
-Separator.foreground = #2F3336
+Separator.foreground = #3C3C3C
 
 # -----------------------------------------------------------------------------
 # ProgressBar
 # -----------------------------------------------------------------------------
-ProgressBar.background = #2A2D2E
+ProgressBar.background = #3C3C3C
 ProgressBar.foreground = @accentColor
 ProgressBar.arc = 8
 
