--- a/arbercharts-demo/src/main/resources/themes/charts.properties
+++ b/arbercharts-demo/src/main/resources/themes/charts.properties
@@ -15,3 +15,28 @@ Chart.legend.iconSize=7
 Chart.legend.background.alpha=0.66
 Chart.legend.border.alpha=0.22
 Chart.legend.background.brightness=1.05
+
+# Demo chart palette (strictly from resources/themes)
+# VS Code Modern Dark-aligned
+Demo.chart.dark.background=#1F1F1F
+Demo.chart.dark.foreground=#CCCCCC
+Demo.chart.dark.grid=#2F3336
+Demo.chart.dark.axis=#9CA3AF
+Demo.chart.dark.accent=#4DA3FF
+Demo.chart.dark.series1=#4DA3FF
+Demo.chart.dark.series2=#4EC9B0
+Demo.chart.dark.series3=#DCDCAA
+Demo.chart.dark.series4=#C586C0
+Demo.chart.dark.series5=#CE9178
+
+# Light fallback
+Demo.chart.light.background=#FFFFFF
+Demo.chart.light.foreground=#24292F
+Demo.chart.light.grid=#DDE3EA
+Demo.chart.light.axis=#57606A
+Demo.chart.light.accent=#0969DA
+Demo.chart.light.series1=#0969DA
+Demo.chart.light.series2=#1F883D
+Demo.chart.light.series3=#AF4DC0
+Demo.chart.light.series4=#BC4C37
+Demo.chart.light.series5=#276EF1
