Remove warm dark chart tones and refresh demo artifact

--- a/arbercharts-demo/src/main/resources/themes/charts.properties
+++ b/arbercharts-demo/src/main/resources/themes/charts.properties
@@ -25,9 +25,9 @@ Demo.chart.dark.axis=#9CA3AF
 Demo.chart.dark.accent=#4DA3FF
 Demo.chart.dark.series1=#4DA3FF
 Demo.chart.dark.series2=#4EC9B0
-Demo.chart.dark.series3=#DCDCAA
-Demo.chart.dark.series4=#C586C0
-Demo.chart.dark.series5=#CE9178
+Demo.chart.dark.series3=#569CD6
+Demo.chart.dark.series4=#9CDCFE
+Demo.chart.dark.series5=#3FB950
 
 # Light fallback
 Demo.chart.light.background=#FFFFFF
