--- a/arbercharts-demo/src/main/resources/themes/charts.properties
+++ b/arbercharts-demo/src/main/resources/themes/charts.properties
@@ -6,7 +6,7 @@ Chart.crosshair.label.fontScale=0.9
 Chart.tooltip.background.alpha=0.92
 Chart.tooltip.border.alpha=0.65
 Chart.legend.position=TOP_CENTER
-Chart.legend.style=business
+Chart.legend.style=swing
 Chart.legend.compact=true
 Chart.legend.showValues=false
 Chart.legend.fontScale=0.86
