Increase axis label scale and retune dark palette to VS Code

--- a/arbercharts-demo/src/main/resources/themes/FlatDarkLaf.properties
+++ b/arbercharts-demo/src/main/resources/themes/FlatDarkLaf.properties
@@ -6,10 +6,10 @@
 # -----------------------------------------------------------------------------
 # Core Colors
 # -----------------------------------------------------------------------------
-@background = #1F1F1F
+@background = #1E1E1E
 @foreground = #CCCCCC
 @accentColor = #4DA3FF
-@selectionBackground = #264F78
+@selectionBackground = #094771
 @selectionForeground = #FFFFFF
 @disabledForeground = #7D8590
 @borderColor = #2B2B2B
