--- a/arbercharts-demo/src/main/resources/themes/charts.properties
+++ b/arbercharts-demo/src/main/resources/themes/charts.properties
@@ -1,5 +1,5 @@
 # Chart-level defaults for the Swing demo (modern UI tuning)
-Chart.axis.label.fontScale=0.6
+Chart.axis.label.fontScale=0.92
 Chart.axis.label.bold=false
 Chart.tooltip.fontScale=1.0
 Chart.crosshair.label.fontScale=0.9
@@ -20,8 +20,8 @@ Chart.legend.background.brightness=1.05
 # VS Code Modern Dark-aligned
 Demo.chart.dark.background=#1F1F1F
 Demo.chart.dark.foreground=#CCCCCC
-Demo.chart.dark.grid=#2F3336
-Demo.chart.dark.axis=#9CA3AF
+Demo.chart.dark.grid=#343B43
+Demo.chart.dark.axis=#B7C5D3
 Demo.chart.dark.accent=#4DA3FF
 Demo.chart.dark.series1=#4DA3FF
 Demo.chart.dark.series2=#4EC9B0
