Enforce demo-only theme resources from main startup

--- a/arbercharts-demo/src/main/resources/themes/charts.properties
+++ b/arbercharts-demo/src/main/resources/themes/charts.properties
@@ -38,5 +38,5 @@ Demo.chart.light.accent=#0969DA
 Demo.chart.light.series1=#0969DA
 Demo.chart.light.series2=#1F883D
 Demo.chart.light.series3=#AF4DC0
-Demo.chart.light.series4=#BC4C37
+Demo.chart.light.series4=#7C3AED
 Demo.chart.light.series5=#276EF1
